--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
 		<version>2.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>blog</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>blog</name>
-	<description>Demo project for Spring Boot</description>
+
+	<groupId>com.site</groupId>
+	<artifactId>CulinaryBlog</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>CulinaryBlog</name>
+	<description>My culinary blog</description>
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -41,11 +43,6 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
